[project]
name = "q2-deblur"
authors = [
    { name = "Daniel McDonald", email = "wasade@gmail.com" }
]
description = "Sequence quality control with deblur"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "None"
Repository = "https://github.com/qiime2/q2-deblur"

[project.entry-points.'qiime2.plugins']
"q2-deblur" = "q2_deblur.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_deblur/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_deblur*"]

[tool.setuptools.package-data]
q2_deblur = ["**/*"]
